# labsCplusplus

./: README.md  mails.txt
BattleDuel/: CMakeLists.txt  CrucialData.h  Game.h  GameMechanicWidgets.h  UIFactory.h  WindowMonitor.h  basicClasses.h  easierDesign.h  main.cpp  sound.h  soundDef.cpp
ParrarelFizzbuzz/: CMakeLists.txt  main.cpp
SimpleParrarelProgramingReferat/: CMakeLists.txt  main.cpp
lab6/: main.cpp
